--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
-.box{
-    background-color: white;
-    border-color: black;
-    border-style: solid;
-    width: 50px;
-    height: 50px;
+.header {
+    background-color: grey;
+    text-align: center;
+}
+.main{
+    background-color: lightgray;
+}
+
+.sketchContainer {
+    margin: 0 25%;
 }
